# cid2024

./: .gitignore  README.md  choose_all_probs.txt  image.html  package-lock.json  pyproject.toml  tf_probs.txt
backend/: app.py
bank/: choose_all.py  choose_all_problems.pkl.final  db_bank.py  loader.py  map.py  map_region_data.pickle.final  map_region_resolved_data.pickle.final  mise.pkl.final  models.py  precalculate.py  region.py  region_blank_distractors.pickle.final  region_blank_possible_records.pickle.final  region_blank_problems.pickle.final  selected.txt  tf.py  tf_problems.pkl.final
classes/common/: data_entry.py  textify.py
classes/difficulty/: difficulties.pkl.usage  main.py
classes/recommender/: main.py
classes/similarity/: encoder.py  main.py  problem_pool.py  util.py  vector_loader.py  vectors.pkl.usage
classes/viewer/: action.py  main.py
classes/viewer/actions/: all_problem.py  random_problem.py  similar_problem.py
classes/viewer/widgets/: action_list.py  action_result.py  image_widget.py  input_dialog.py  list_widget.py
data/: textbook_eastasia.txt  textbook_eastasia_orig.txt  textbook_korean.txt  textbook_korean_orig.txt  textbook_world.txt  textbook_world_orig.txt
demo-backend/: app.py
demo-frontend/: package-lock.json  package.json  vite.config.ts
demo-frontend/src/: App.tsx
demo-frontend/src/components/: api.tsx  globalStyled.tsx  problem.json  problemViewer.tsx
distractor/: __init__.py  sensevec.py  wordnet.py
examples/: db_loader_example.py  difficulty_example.py  direct_api_example.py  llm_example.py  recommender_example.py  similarity_example.py  text_loader_example.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/api/: global.ts  problem.ts  recommendation.ts
frontend/src/components/: api.tsx  customProblem.json  customProblemViewer.tsx  problem.json  problemViewer.tsx  types.tsx
llm/: ai_handler.py  ai_invoker.py  token_handler.py  utils.py
llm_example/: main.py
log/: __init__.py
settings/: abcselect_prompts.toml  ask_capital_city_prompt.toml  bank_map_prompts.toml  bank_region_prompts.toml  config_loader.py  configuration.toml  data_entry.py  db_loader.py  difficulty_prompts.toml  distractor_prompts.toml  event_prompts.toml  extractor_prompts.toml  region_prompts.toml  sequential_prompts.toml  similarity_util_prompts.toml  template.secret.toml  textbook_loader.py
util/: parse.py
valid/: rag.py
(+3 files in other folders)
