[tool.poetry]
name = "cid2024"
version = "0.1.0"
description = ""
authors = ["Gyojun Youn <youngyojun@gmail.com>"]
readme = "README.md"
packages = [{ include = "**/*" }]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.5"
mysql-connector = "^2.2.9"
pyqt6 = "^6.6.1"
nltk = "^3.8.1"
sense2vec = "^2.0.2"
torch = "^2.3.0"
deep-translator = "^1.11.4"
geopandas = "^0.14.4"
contextily = "^1.6.0"
pillow = "^10.3.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
openai = "^1.16.2"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.1"
numpy = "^1.26.4"
dynaconf = "^3.2.5"
litellm = "^1.34.27"
aiolimiter = "^1.1.0"
retry = "^0.9.2"
loguru = "^0.7.2"
Jinja2 = "^3.1.3"
Resource = "^0.2.1"
transformers = "^4.39.3"
scipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
